solved spacing issue. am finished with this class assignment!

--- a/ImageLondon/css/gallery.css
+++ b/ImageLondon/css/gallery.css
@@ -88,7 +88,7 @@ h3 {
 }
 
 #image {
-  line-height: 525px;
+  line-height: 530px;
   width: 90%;
   height: 525px;
   margin: 0 auto;
@@ -105,6 +105,7 @@ h3 {
   width: 10%;
   height: auto;
   margin-left: 8%;
+  margin-bottom: 4px;
   border: 1px solid #060606;
 }
 
